Centrer mon  photo de profil

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div data-aos="fade-right">
                     <div class="relative">
                         <div class="w-64 h-64 mx-auto rounded-full overflow-hidden shadow-2xl border-4 border-blue-500">
-                            <img src="me.png" alt="Mehdi Rejeb Kaabia" class="w-full h-full object-cover">
+                            <img src="me.png?v=3" alt="Mehdi Rejeb Kaabia" class="profile-image">
                         </div>
                         <div class="absolute -top-4 -right-4 w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white">
                             <i class="fas fa-user-graduate text-xl"></i>
